           MusE::startClipList() so the main MusE instance owns it like all the others. It deletes too, now. 
          Also removed odd special Toplevel::CLIPLIST case in MusE::toplevelDeleted(). Hope it works... 
          Tested closing complex song, with all windows open. Nice to see final Finished! message (new, with -D).
21.11.2010
        - All menus now use QActions. Some shortcuts are left to be assigned correctly (Orcan)
        - Clean up: Remove submenu integer ids from the MusE class in favor of QActions (Orcan)
        - Ported the following .ui widgets to Qt4: didyouknow, transposebase, cliplist,
          configmidifilebase (Orcan)
        - Ported View and MidiEditor classes. Fixed TopWin constructor. Test OK all editors. (Tim) 
20.11.2010
        - Remove most wrapper classes around .ui widgets. I was wrapping them too much. Some widgets
          (e.g. songinfo) still need wrappers though. (Orcan)
        - Ported the following .ui widgets to Qt4: appearancebase, mixdowndialogbase, 
          shortcutcapturedialogbase, shortcutconfigbase, aboutbox, editsysexdialogbase,
          editnotedialogbase, editctrlbase (Orcan)
        - Converted all of editevent.cpp to Qt4 (Orcan)
        - Load default compiled-in style-sheet resource :/style.qss in main(). (Tim)
          Added style sheet support to Appearance settings, with reset button.
19.11.2010
        - Started some conversions of midieditor, pianoroll, drumedit, incl. their QGridLayouts. (Tim)
        - More icon conversion work (Orcan)
        - Move global, user, project .xpm files into the xpm/ directory. Handle them the same way in 
          filedialog.cpp as we handle other pixmaps elsewhere. (Orcan)
        - Ported the following .ui widgets to Qt4: commentbase, metronomebase, mtrackinfobase, 
          midifilter (Orcan)
18.11.2010
        - Updated build part README file - read it! Tell user to specify Release build type. (Tim)